src/objects/Alert__c.object
<CustomObject>
    <description>Used to store Provider and Member Alerts which are imported into SF from UHG SharePoint</description>
    <fields>
        <fullName>AlertExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AlertExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Comments__c</fullName>
        <description>Alert Comments</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Alert Comments</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Title__c</fullName>
        <description>Alert&apos;s title</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Bundle_Option_ID__c</fullName>
        <description>Benefit Bundle Option ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Bundle Option ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <description>Indicates audience of alert</description>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Polaris</fullName>
                </value>
                <value>
                    <fullName>Spire</fullName>
                </value>
                <value>
                    <fullName>PIR - RR/PA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Start Date for alert&apos;s Effective Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of alert&apos;s effective date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>Based on alert type, either member&apos;s group # or provider&apos;s facility #</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <description>Based on alert type, either member&apos;s id or provider&apos;s tax id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>&apos;Alert_Title__c:&apos;&amp;Alert_Title__c
&amp;&apos;AlertExternalID__c:&apos;&amp;AlertExternalID__c
&amp;&apos;Benefit_Bundle_Option_ID__c:&apos;&amp;Benefit_Bundle_Option_ID__c
&amp;&apos;ID_Number__c:&apos;&amp;ID_Number__c
&amp;&apos;SharePoint_ID__c:&apos;&amp;SharePoint_ID__c
&amp;&apos;Type__c:&apos;&amp;TEXT(Type__c)
&amp;&apos;Group_Number__c:&apos;&amp;Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_ID__c</fullName>
        <description>External Id to found on excel worksheets for the row (alert)  stored in SharePoint</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SharePoint ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates what type of alert: member, member group, provider, provider group</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Member Group</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Provider Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Alert</label>
    <listViews>
        <fullName>Active_Alerts</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Group_Number__c</columns>
        <columns>ID_Number__c</columns>
        <columns>Alert_Title__c</columns>
        <columns>Alert_Comments__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Effective_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Active Alerts</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>ID_Number__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Benefit_Bundle_Option_ID__c</columns>
        <columns>Alert_Title__c</columns>
        <columns>Alert_Comments__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Gregory</fullName>
        <columns>NAME</columns>
        <columns>ID_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Alert_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Producer</value>
        </filters>
        <label>Gregory</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Alert_Comments_cannot_be_Blank</fullName>
        <active>false</active>
        <description>Does not allow user to save an alert if Alert Comment is BLANK</description>
        <errorConditionFormula>ISBLANK( Alert_Comments__c )</errorConditionFormula>
        <errorDisplayField>Alert_Comments__c</errorDisplayField>
        <errorMessage>You must enter Alert Comments in order to save this record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Benefit_Bundle_Option_ID_GroupAndBundle</fullName>
        <active>true</active>
        <description>Benefit Bundle Option ID and Group ID or ID Number can&apos;t be added at the same time</description>
        <errorConditionFormula>IF(AND(ISPICKVAL(Type__c ,&apos;Member Group&apos;),NOT(ISBLANK(Benefit_Bundle_Option_ID__c)),OR(NOT(ISBLANK(Group_Number__c)),NOT(ISBLANK(ID_Number__c)))),true,false)</errorConditionFormula>
        <errorDisplayField>Benefit_Bundle_Option_ID__c</errorDisplayField>
        <errorMessage>You cannot enter Group Number or ID Number with Benefit Bundle Option ID.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Benefit_Bundle_Option_ID_NotMemberGroup</fullName>
        <active>true</active>
        <description>type selected is different than Member Group and Benefit Bundle Option ID is not allowed</description>
        <errorConditionFormula>IF(AND(NOT(ISPICKVAL(Type__c ,&apos;Member Group&apos;)),NOT(ISBLANK(Benefit_Bundle_Option_ID__c))),true,false)</errorConditionFormula>
        <errorDisplayField>Benefit_Bundle_Option_ID__c</errorDisplayField>
        <errorMessage>Benefit Bundle Option ID is only entered for Member Group Alerts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bundle_Id_Required</fullName>
        <active>true</active>
        <description>Check if bundle option id is blank when type is member group and group number is blank</description>
        <errorConditionFormula>IF(AND(ISPICKVAL( Type__c , &apos;Member Group&apos;), ISBLANK( Group_Number__c),ISBLANK(Benefit_Bundle_Option_ID__c) ),true,false)</errorConditionFormula>
        <errorDisplayField>Benefit_Bundle_Option_ID__c</errorDisplayField>
        <errorMessage>You must enter either the Benefit Bundle Option ID or the Group Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_cannot_be_before_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Effective_Date__c</errorConditionFormula>
        <errorMessage>Effective Date must be the same as or before End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Group_Number_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(AND(OR(ISPICKVAL( Type__c , &apos;Member Group&apos;),ISPICKVAL( Type__c , &apos;Provider Group&apos;)), ISBLANK( Group_Number__c)),AND(ISPICKVAL( Type__c , &apos;Member Group&apos;), ISBLANK( Group_Number__c),ISBLANK(Benefit_Bundle_Option_ID__c) )),true,false)</errorConditionFormula>
        <errorDisplayField>Group_Number__c</errorDisplayField>
        <errorMessage>Group Number  is required when the type is Member Group or Provider Group</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ID_Number_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(OR(ISPICKVAL( Type__c , &apos;Member&apos;),ISPICKVAL( Type__c , &apos;Provider&apos;),ISPICKVAL( Type__c , &apos;Producer&apos;)),  ISBLANK(ID_Number__c) ),true,false)</errorConditionFormula>
        <errorDisplayField>ID_Number__c</errorDisplayField>
        <errorMessage>ID number is required when the type is Member or Provider or Producer</errorMessage>
    </validationRules>
</CustomObject>